# api-gateway-rust

./: .dockerignore  .gitguardian.yaml  .gitignore  API_GATEWAY_DESIGN.md  AUTHENTICATION.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  MISSING_TASKS.md  OPERATIONAL_READINESS.md  README.md  RUNBOOK.md  STAGE3_AUTH.md  TESTING.md  api_gateway_assessment.md  config.example.json  config.example.yaml  load-test.sh
.github/workflows/: ci.yml  release.yml  security-audit.yml  security.yml
k8s/: configmap.yaml  deployment.yaml  secrets.yaml.template  service.yaml  servicemonitor.yaml
k8s/monitoring/: grafana-dashboard.json  prometheus-rules.yaml
prompts/: design-spec.md  github-actions.md  quality-assessment.md  terraform.md
scripts/: generate-test-certs.sh
src/: auth.rs  config.rs  config_reload.rs  error.rs  handler.rs  lib.rs  logging.rs  main.rs  metrics.rs  middleware.rs  rate_limiter.rs  routing.rs  server.rs  upstream.rs
terraform/: DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/custom-domain/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: auth_integration_test.rs  auth_test.rs  authorization_e2e_test.rs  integration_test.rs  middleware_pipeline_test.rs  rate_limiter_test.rs  rate_limiting_integration_test.rs  routing_test.rs  security_test.rs  token_validation_test.rs
