[package]
name = "api-gateway-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# TLS support
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP types
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "limit"] }
hyper = { version = "1.1", features = ["full"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for upstream requests
reqwest = { version = "0.11", features = ["json", "stream"] }

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
