[package]
name = "api-gateway-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# TLS support
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP types
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "limit"] }
hyper = { version = "1.1", features = ["full"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for upstream requests
reqwest = { version = "0.11", features = ["json", "stream"] }

# JWT and authentication
jsonwebtoken = "9.2"
base64 = "0.21"

# Metrics
prometheus = "0.14"
lazy_static = "1.4"

# Redis for rate limiting and session store
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration hot-reload
notify = "6.1"

# Token validation caching
moka = { version = "0.12", features = ["future"] }

# Regex for sensitive data redaction
regex = "1.10"

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
